light dark mode button and submit button positioning and emoji

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,7 +57,21 @@ main {
   margin-top: 50px;
 }
 
-
+.ldbutton {
+  margin-left: 60%;
+  padding-top: 5%;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  
+}
+.backbutton {
+  margin-left: 30%;
+  padding: 1%;
+}
 .post-container {
   margin-left: 5%;
   margin-right: 5%;
@@ -156,6 +170,7 @@ a:active {
 .post-submit-btn {
   background-color: #69a1c7;
   color: white;
+  margin-top: 10px;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
