--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -153,7 +153,8 @@ a:active {
   border-radius: 10px;
   overflow-y: auto;
   max-height: 80vh;
-  text-align: right;
+  text-align: center;
+  justify-content: center;
   animation: fadeIn 0.5s ease-in-out;
 }
 
